update 8.2.0