@@ -23,10 +23,11 @@ import org.springframework.transaction.annotation.Transactional;
 /**
  * Service Implementation for managing {@link com.mycompany.myapp.log.domain.SysLog}.
  */
+@SuppressWarnings("UnusedReturnValue")
 public class SysLogBaseService<R extends SysLogRepository, E extends SysLog> extends BaseServiceImpl<SysLogRepository, SysLog> {
 
     private final Logger log = LoggerFactory.getLogger(SysLogBaseService.class);
-    private final List<String> relationNames = Arrays.asList();
+    private final List<String> relationNames = List.of();
 
     protected final SysLogRepository sysLogRepository;
 
@@ -64,11 +65,10 @@ public class SysLogBaseService<R extends SysLogRepository, E extends SysLog> ext
     @Transactional(rollbackFor = Exception.class)
     public SysLogDTO update(SysLogDTO sysLogDTO) {
         log.debug("Request to update SysLog : {}", sysLogDTO);
-
         SysLog sysLog = sysLogMapper.toEntity(sysLogDTO);
 
-        sysLogRepository.updateById(sysLog);
-        return findOne(sysLogDTO.getId()).orElseThrow();
+        this.saveOrUpdate(sysLog);
+        return findOne(sysLog.getId()).orElseThrow();
     }
 
     /**
