@@ -23,11 +23,12 @@ import org.springframework.transaction.annotation.Transactional;
 /**
  * Service Implementation for managing {@link com.mycompany.myapp.domain.BusinessType}.
  */
+@SuppressWarnings("UnusedReturnValue")
 public class BusinessTypeBaseService<R extends BusinessTypeRepository, E extends BusinessType>
     extends BaseServiceImpl<BusinessTypeRepository, BusinessType> {
 
     private final Logger log = LoggerFactory.getLogger(BusinessTypeBaseService.class);
-    private final List<String> relationNames = Arrays.asList();
+    private final List<String> relationNames = List.of();
 
     protected final BusinessTypeRepository businessTypeRepository;
 
@@ -69,11 +70,10 @@ public class BusinessTypeBaseService<R extends BusinessTypeRepository, E extends
     @Transactional(rollbackFor = Exception.class)
     public BusinessTypeDTO update(BusinessTypeDTO businessTypeDTO) {
         log.debug("Request to update BusinessType : {}", businessTypeDTO);
-
         BusinessType businessType = businessTypeMapper.toEntity(businessTypeDTO);
 
-        businessTypeRepository.updateById(businessType);
-        return findOne(businessTypeDTO.getId()).orElseThrow();
+        this.saveOrUpdate(businessType);
+        return findOne(businessType.getId()).orElseThrow();
     }
 
     /**
